fix text alignment and wrap

--- a/src/app/pages/categories/categories.page.scss
+++ b/src/app/pages/categories/categories.page.scss
@@ -1,5 +1,5 @@
 ion-card {
-  margin: 0;
+  margin: 0px;
   border-radius: 5px;
 }
 
@@ -28,6 +28,13 @@ ion-label {
   h1 {
     font-size: 18px;
     line-height: 1.2;
-  }  
+  }
+  height: 42px;
+  align-items: center; 
+  justify-content: center;
+}
 
+.text-flex { // TODO build-in solution available?
+  display: flex;
+  text-align: center;
 }
