--- a/src/app/pages/rooms/rooms.page.scss
+++ b/src/app/pages/rooms/rooms.page.scss
@@ -18,15 +18,24 @@ ion-item {
 }
 
 ion-icon {
-  margin: 0 auto;
+  margin: 0 auto; // center
   font-size: 42px;
   margin-top: 20px; // TODO vertial align
 }
 
 ion-label {
-  margin: 0; 
+  margin: 0;
   h1 {
     font-size: 18px;
     line-height: 1.2;
-  }  
+
+  }
+  height: 42px;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-flex { // TODO build-in solution available?
+  display: flex;
+  text-align: center;
 }
